--- a/itinerary.html
+++ b/itinerary.html
@@ -404,11 +404,20 @@
             sidebarList.innerHTML = '';
             mainContent.innerHTML = '';
 
-            if (data.tripTitle) {
+            // Update Budget Summary
+            const costEl = document.getElementById('estimatedCost');
+            if (costEl && data.estimated_daily_budget) {
+                const budget = data.estimated_daily_budget;
+                costEl.textContent = `₩${Number(budget.amount).toLocaleString()}`;
+            } else if (costEl) {
+                costEl.textContent = '정보 없음';
+            }
+
+            if (data.tripTitle || data.title) {
                 const titleDiv = document.createElement('div');
                 titleDiv.className = 'mb-8';
                 titleDiv.innerHTML = `
-                      <h1 class="text-3xl font-bold tracking-tight">${data.tripTitle || '나의 여행 일정'}</h1>
+                      <h1 class="text-3xl font-bold tracking-tight">${data.tripTitle || data.title || '나의 여행 일정'}</h1>
                       <p class="text-[#4c739a]">${data.summary || 'AI가 생성한 맞춤 여행 일정입니다.'}</p>
                   `;
                 mainContent.appendChild(titleDiv);
